--- a/ClienteOS/nbproject/project.properties
+++ b/ClienteOS/nbproject/project.properties
@@ -62,7 +62,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=clienteos.Main
+main.class=br.edu.fasa.OS.Presentation.Main
 manifest.file=${meta.inf}/MANIFEST.MF
 meta.inf=${source.root}/conf
 platform.active=default_platform
